--- a/css/styles.css
+++ b/css/styles.css
@@ -38,10 +38,22 @@ p {
 }
 
 ul {
-  list-style: none;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
+}
+
+img {
+  display: block;
+}
+
+.list {
+  list-style: none;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /* Header styles */
