--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --white: #ffffff;
   --black: #000000;
   --background-dark: #2f303a;
+  --light-grey: #f5f4fa;
 }
 
 body {
@@ -72,6 +73,26 @@ img {
   margin: 0 auto;
   display: flex;
 }
+.button {
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  letter-spacing: 0.06em;
+  background-color: var(--brand-color);
+  color: var(--white);
+  border: none;
+  cursor: pointer;
+}
+.secondary-header {
+  color: var(--header-color);
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
 
 /* Header styles */
 .container.header {
@@ -134,51 +155,80 @@ img {
   padding: 10px 32px;
   border-radius: 4px;
 }
-.secondary-header {
-  color: var(--header-color);
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
-.project-thumbnails {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.project-item {
-  margin: 30px;
-}
+/* Our benefits styles */
 .caption {
   color: var(--header-color);
   font-size: 14px;
   line-height: 1.14;
+  margin-bottom: 10px;
+}
+.our-benefits .list {
+  display: flex;
+}
+.our-benefits .list-item:not(:last-child) {
+  margin-right: 30px;
+}
+.our-benefits.section {
+  padding-bottom: 0;
+}
+
+/* What we do styles */
+.our-expertise .container {
+  flex-direction: column;
+  align-items: center;
+}
+.our-expertise .list {
+  display: flex;
+}
+.our-expertise .list-item:not(:last-child) {
+  margin-right: 30px;
+}
+.project-thumbnails {
+  display: flex;
+}
+
+/* Our team styles */
+.our-team {
+  background-color: var(--light-grey);
+}
+
+.our-team .container {
+  flex-direction: column;
+  align-items: center;
+}
+.our-team .list {
+  display: flex;
+}
+.our-team .card:not(:last-child) {
+  margin-right: 30px;
+}
+.person-caption {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
+  background-color: var(--white);
 }
 .caption-name {
   font-size: 16px;
   line-height: 1.19;
 }
+
+/* Portfolio styles */
+
 .project-name {
   font-size: 18px;
   line-height: 2;
 }
+
 .project-thumbnails-link {
   text-decoration: none;
   color: var(--main-color);
 }
-.button {
-  font-family: inherit;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.06em;
-  background-color: var(--brand-color);
-  color: var(--white);
-  border: none;
-  cursor: pointer;
+.project-item {
+  margin: 30px;
 }
+
 .filter-button {
   font-family: inherit;
   font-weight: 500;
